some features working

--- a/index.html
+++ b/index.html
@@ -23,17 +23,57 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<div class="slides">
-			  <section>
-			    <h2>What is Securitization</h2>
+		  <div class="slides">
+		    			  <section>
+					    <h3>What should make sense by the end of this presentation ...</h3>
+					    	<p class="fragment current-visible">How securitization makes financing assets cheaper.</p>
+					    	<p class="fragment current-visible">and show it makes some assets receive financing that otherwise wouldn't</p>
+
+					  </section>
+			  <section data-transition="slide-in fade-out">
+			    <h2>What is Securitization?</h2>
 			    <p> Text </p>
 			    <p class="fragment fade-up">fade-up (also down, left and right!)</p>
 	<p class="fragment current-visible">visible only once</p>
 	<p class="fragment highlight-current-blue">blue only once</p>
 			  </section>
-				<section>Slide 2</section>
+			  
+			  <section>
+			  <section>
+			    <h3>What can we securitize?</h3>
+			    <p style="text-align:left;" class="fragment current-visible">
+			      We can securitize any asset which generates a stream of cash flows. These are often financial assets such as loans, but can also be leases and other trade receivables.
+			    </p>
+			    <p style="text-align:left;" class="fragment current-visible">
+			      To securitize an asset it is necessary to be able to estimate parameters of the assets' cash flows, such as expected cash flows and the standard deviation. The ownership of the assets must also be transferable.
+			    </p>
+			    </section>
+			    <section>
+			    <p style="text-align:left;">Assets are more appropriate for securitization if:</p>
+<ul>
+<li class="fragment highlight-current-blue">they provide diversification---geographic or economic.</li>
+<li class="fragment highlight-current-blue">there is a large number of assets.</li>
+<li class="fragment highlight-current-blue">there correlation structure is known, and the assets preferably have low correlations.</li>
+<li class="fragment highlight-current-red"> Correlation is key...</li>
+</ul>
+</section>
+			  </section>
+
+			  <section>
+			    <section data-background-image="mi.png" data-background-size="1000px"> </section>
+			    <section>
+			      <h3>Matt Brigida</h3>
+			      Contact:
+			    </section>
+			    <section> <a href="https://github.com/Matt-Brigida/securitization-presentation">Presentation Code</a>  </section>
+			    <section> Spreadsheet:  </section>
+			  </section>
+
+			  
 			</div>
 		</div>
+
+
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
